syntax = "proto3";
option csharp_namespace = "Shared.Protos.v1";
package weather.v1;

service WeatherService {
  rpc GetWeather (WeatherRequest) returns (WeatherResponse);
}

message WeatherRequest {
  string city = 1;
}

message WeatherResponse {
  string city = 1;
  double temperature = 2;
}